tests/snapshots/apply_view_diff__pager_fallback__failing_pager_falls_back_to_stdout.snap
---
source: tests/apply_view_diff.rs
expression: diff
---
--- <root>/target/file2
+++ <root>/source/file1
@@ -1 +1 @@
-content1
+content2
deployed 0, replaced 0, skipped 1
