tests/snapshots/apply_view_diff__pager_fallback__no_pager_configured_prints_diff_to_stdout.snap
---
source: tests/apply_view_diff.rs
expression: &diff
---
--- <root>/target/target.txt
+++ <root>/source/file.txt
@@ -1 +1 @@
-old content
+new content
deployed 0, replaced 0, skipped 1
